--- a/arex-storage-config/pom.xml
+++ b/arex-storage-config/pom.xml
@@ -34,6 +34,18 @@
       <artifactId>jakarta.annotation-api</artifactId>
       <groupId>jakarta.annotation</groupId>
     </dependency>
+    <dependency>
+      <groupId>com.github.jsqlparser</groupId>
+      <artifactId>jsqlparser</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <artifactId>junit</artifactId>
+      <groupId>junit</groupId>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
@@ -41,7 +53,7 @@
   <parent>
     <artifactId>arex-storage-service</artifactId>
     <groupId>com.arextest</groupId>
-    <version>1.1.28</version>
+    <version>1.1.28.9.niyan-SNAPSHOT</version>
   </parent>
 
   <properties>
